--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="stats"></div>
+      <div class="coin"></div>
+      <div class="buttons">
+        <button class="btn flip-coin">Flip Coin</button>
+        <button class="btn reset">Reset</button>
+      </div>
+    </div>
+    <script src="script.js" type="module"></script>
+  </body>
 </html>
