--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
   </head>
   <body>
     <div class="container">
-      <div class="stats"></div>
-      <div class="coin"></div>
+      <div class="stats">
+        <p id="heads-count">Heads: 0</p>
+        <p id="tails-count">Tails: 0</p>
+      </div>
+      <div class="coin" id="coin">
+        <div class="heads">
+          <img src="heads.svg" />
+        </div>
+        <div class="tails">
+          <img src="tails.svg" />
+        </div>
+      </div>
       <div class="buttons">
-        <button class="btn flip-coin">Flip Coin</button>
-        <button class="btn reset">Reset</button>
+        <button id="flip-button">Flip Coin</button>
+        <button id="reset-button">Reset</button>
       </div>
     </div>
     <script src="script.js" type="module"></script>
